fix(#5): use min-height instead of height for layout container
* This fixes an issue on Safari where the blog post list would overlap with the header

--- a/src/components/layout/styles.module.css
+++ b/src/components/layout/styles.module.css
@@ -1,6 +1,6 @@
 .container {
   width: 90%;
-  height: 100vh;
+  min-height: 100vh;
   margin: auto;
   display: flex;
   flex-direction: column;
